# PyFactoryBridge

./: .gitignore  CONTRIBUTORS.md  README.md  methods.md  pyproject.toml
examples/: change_options.py  claim_and_new_game.py
pyfactorybridge/: __init__.py  __main__.py  authentication.py  exceptions.py  ssl_adapter.py
