[tool.poetry]
name = "pyfactorybridge"
version = "0.1.0"
description = "Wrapper around the Satisfactory Dedicated Server HTTP API"
authors = ["Jayy001 <github@skii.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
